
NEW FEATURES

    o new option 'allow.error' in `openfn.gds()` for data recovery

    o new option 'log.only' in `diagnosis.gds()`

    o new C functions `GDS_Node_Unload()` and `GDS_Node_Load()` in R_GDS.h

    o new sparse array data types in GDS (SparseReal32, SparseReal64,
      SparseInt8, SparseInt16, SparseInt32, SparseInt64, SparseUInt8,
      SparseUInt16, SparseUInt32, SparseUInt64)

UTILITIES

    o zlib updated to v1.2.11 from v1.2.8

    o xz updated to v5.2.4 from v5.2.3

    o LZ4 updated to v1.9.2 from v1.7.5


CHANGES IN VERSION 1.22.0
-------------------------

NEW FEATURES

    o a new function `unload.gdsn()` to unload a GDS node from memory

UTILITIES

    o add '#pragma GCC optimize("O3")' to some of C++ files when GCC is used

    o add the compiler information in `system.gds()`

    o change the file name "vignettes/gdsfmt_vignette.Rmd" to "vignettes/gdsfmt.Rmd",
      so `vignette("gdsfmt")` can work directly

BUG FIXES

    o avoid the segfault if the data type is not registered internally

    o use O_CLOEXEC (the close-on-exec flag) when open and create files to avoid
      potentially leaking file descriptors in forked processes


CHANGES IN VERSION 1.20.0
-------------------------

UTILITIES

    o optimize the C implementation of 'packedreal8' using a look-up table

NEW FEATURES

    o new data types 'packedreal8u', 'packedreal16u', 'packedreal24u' and
      'packedreal32u'

BUG FIXES

    o the compression method 'LZ4_RA.max' does not compress data

    o `add.gdsn()` fails if a factor variable has no level

    o `add.gdsn(, storage=index.gdsn())` accepts the additional parameters from
      `index.gdsn()`, e.g., 'offset' and 'scale' for packedreal8


CHANGES IN VERSION 1.18.1
-------------------------

BUG FIXES

    o the node name should not contain a slash '/'


CHANGES IN VERSION 1.18.0
-------------------------

NEW FEATURES

    o new options 'recursive' and 'include.dirs' in `ls.gdsn()`: the listing